# course_marking

./: .env  Cargo.toml  LICENSE  README.md
cm_backend/: .env  Cargo.toml
cm_backend/src/: main.rs  state.rs  util.rs
cm_backend/src/dbaccess/: comments.rs  course_info.rs  mod.rs  users.rs
cm_backend/src/entity/: comments.rs  course_info.rs  mod.rs  prelude.rs  users.rs
cm_backend/src/handler/: comments.rs  course_info.rs  mod.rs  users.rs
cm_backend/src/model/: course_info.rs  mod.rs
cm_backend/src/router/: comments.rs  course_info.rs  mod.rs  users.rs
cm_frontend/: index.html  package-lock.json  package.json  vite.config.js
cm_frontend/src/: About.vue  App.vue  CoursePage.vue  Home.vue  NotFound.vue  UserLogin.vue  UserPage.vue  codeStore.js  main.js  style.css
sql/: course_marking.sql
