[package]
name = "cm_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.72"
dotenv = "0.15.0"
sea-orm = { version = "0.12.15", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "debug-print",
] }
anyhow = "1.0.81"